2009-09-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.62

2009-08-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	revert NB#134557, bits of it may be useful later

2009-08-31  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.61

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_set_client_redirection): Use
	CompositeRedirectAutomatic instead of CompositeRedirectManual when
	(un)redirecting subwindows, it fixes the problem with black browser
	thumbnails when in task switcher.

	Release 0.2.60

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_set_client_redirection): Add support for
	(un)redirecting dialogs, menus etc.

2009-08-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-window.c
	* matchbox/core/mb-wm-client-window.h
	* matchbox/core/mb-wm-types.h
	* matchbox/core/mb-wm-atoms.c:
	  Get _HILDON_PORTRAIT_MODE_REQUEST of windows when they're mapped.
	* matchbox/core/mb-window-manager.h
	* matchbox/core/mb-window-manager.c:
	  Emit MBWindowManagerSignalPortraitForecast if the window being
	  mapped has _HILDON_PORTRAIT_MODE_REQUEST.

2009-08-29  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes for automatic non-compositing feature and NB#135950.

	* matchbox/core/mb-window-manager.c (mb_wm_handle_map_notify):
	Unredirect an unredirected client again if it was reparented, because
	it has caused an implicit redirection again.
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_set_client_redirection): (Un)redirect the
	client window or frame depending on fullscreenness. Remove the server
	grab, it does not seem to be necessary.
	* matchbox/core/mb-wm-client.c (mb_wm_client_set_state): Do not assign
	a bitmask to 'old_state' because it is compared with Bool value later,
	using '==' operator.  This saves us an extra reparenting (and
	redrawing) when the browser window is mapped in fullscreen.
